# stl-import

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  stl_import.cpp  stl_import.h  stl_importer.cpp  stl_importer.h  stl_importer_tests.cpp  test.cpp  triangle_mesh.cpp  triangle_mesh.h  tut_test.cpp
Debug/: makefile  stl-import  stl_import.d  subdir.mk  test.d
stl_import/: build_mesh.h  mesh2.h  stl_import.cpp  stl_import_exception.h  stl_importer.cpp  triangle_mesh.h
test_data/: test_tetrahedron.stl
tests/: build_mesh_tests.cpp  stl_importer_tests.cpp  test.cpp  tut_test.cpp
tests/test_data/: DNA_L.stl  unit_cube.stl  unit_sphere-ascii.stl
